# github_statistics

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md  Roadmap.md  repos.json  requirements.txt  stargazers.py
data/: repos.json
src/: main.rs
