[package]
name = "github_statistics"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }  # reqwest with JSON parsing support
futures = "0.3.31"  # for our async / await blocks
tokio = { version = "1.40.0", features = ["full"] }  # for our async runtime
serde = { version = "1.0", features = ["derive"] }
