[package]
name = "github_stats"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dotenv = "0.15"
openssl-sys = { version = "0.9", features = ["vendored"] }
